# sted2-clone

./: .editorconfig  .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  vite.config.ts
.storybook/: main.ts  preview.ts
src/: App.css  App.tsx  index.tsx  input.css  main.tsx  styles.css  useInvoke.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/recomposer-file/: Cargo.toml
src-tauri/crates/recomposer-file/src/: lib.rs
src-tauri/crates/recomposer-file/src/event/: comment_event.rs  exclusive_event.rs  parse.rs  types.rs
src-tauri/crates/recomposer-file/src/header_block/: parse.rs  types.rs
src-tauri/crates/recomposer-file/src/track_block/: parse.rs  types.rs
src-tauri/crates/sted-cli/: Cargo.toml
src-tauri/crates/sted-cli/src/: main.rs
src-tauri/crates/sted-cli/test/: test.rcp
src-tauri/crates/sted-core/: Cargo.toml
src-tauri/crates/sted-core/src/: lib.rs  play.rs  ports.rs  song_info.rs
src-tauri/crates/sted-midi/: Cargo.toml
src-tauri/crates/sted-midi/src/: lib.rs  main.rs  midi.rs  serial.rs
src-tauri/src/: config.rs  file.rs  main.rs  midi.rs  player.rs  recomposer_format.rs  smf.rs  song.rs  state.rs  test.rcp
src-tauri/src/file/: load.rs  mod.rs  standard_midi_file.rs
src-tauri/src/file/recomposer_file/: load.rs  mod.rs
src-tauri/src/file/standard_midi_file/: event.rs  load.rs  mod.rs  parse_header_chunk.rs  parse_track_chunk.rs  status_byte.rs  variable_length_bytes.rs
src-tauri/src/menu/: mod.rs
src-tauri/src/midi/: mod.rs
src-tauri/src/player/: mod.rs  play.rs  play_status.rs  play_status_thread.rs  playing_thread.rs  prepare.rs  stop.rs  util.rs
src-tauri/src/song/: convert.rs  from_rcp_file.rs  mod.rs  song.rs
src-tauri/src/state/: file_state.rs  key_state.rs  midi_connection_state.rs  midi_output_state.rs  mod.rs  sequencer_state.rs  song_state.rs
src-tauri/test/: midi602_format0.mid  test.mid  ・λ・_format0.mid
src/feature/BinaryViewer/: index.tsx
src/feature/TrackMonitor/: TrackMonitor.tsx  index.tsx  useTrackMonitor.ts
src/features/Header/: Header.stories.ts  Header.tsx
src/features/Menu/: Menu.tsx  useMenuHotkeys.ts
src/features/MenuItem/: MenuItem.stories.ts  MenuItem.tsx
src/features/SongInfo/: SongInfo.stories.ts  SongInfo.tsx
src/features/TrackList/: TrackList.tsx  (+1 more)
src/page/: MainScreen.tsx  PlayPanel.tsx  Settings.tsx
src/pages/: MainScreen.stories.ts  MainScreen.tsx  TrackEditScreen.stories.ts  TrackEditScreen.tsx
(+14 files in other folders)
