[package]
name = "sted2-clone"
version = "0.0.0"
description = "Clone of the STed2 the MIDI Sequencer"
authors = ["Daisuke Yamamura <mucho613@gmail.com>"]
license = "MIT"
repository = "https://github.com/mucho613/sted2-clone/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midir = "0.9.1"
serde_bytes = "0.11.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
